Clean up some unecessary stuff

--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Entrance Animation for Images | Demo 1 | Codrops</title>
-    <meta name="description" content="A circular stack intro animation for images." />
-    <meta name="keywords" content="gsap, animation, intro, stack, images" />
-    <meta name="author" content="deadrabbbbit for Codrops" />
-    <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <title>Izzy's Page</title>
+    <meta name="description" content="Landing page for my personal site" />
+    <meta name="author" content="Izzyv" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Gloock&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Saira Stencil One&display=swap"
       rel="stylesheet"
     />
 
@@ -22,10 +18,7 @@
     </script>
   </head>
 
-  <body class="demo-1 loading">
-    <div data-debug>
-      <div></div>
-    </div>
+  <body class="loading">
     <main>
       <div class="content">
         <div class="scene">
@@ -76,9 +69,9 @@
         </div>
 
         <div class="headings">
-          <h1 class="headings__main gloock-regular">Izzy's</h1>
-          <h1 class="headings__main gloock-regular">Page</h1>
-          <h5 class="headings_subtitle gloock-regular">Press anywhere</h5>
+          <h1 class="headings__main font-regular">Izzy's</h1>
+          <h1 class="headings__main font-regular">Page</h1>
+          <h5 class="headings_subtitle font-regular">Press anywhere</h5>
         </div>
       </div>
     </main>
