--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Landing page for my personal site" />
     <meta name="author" content="Izzyv" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Saira Stencil One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Press Start 2P&display=swap"
       rel="stylesheet"
     />
 
