--- a/index.html
+++ b/index.html
@@ -74,6 +74,25 @@
           <h5 class="headings_subtitle font-regular">Press anywhere</h5>
         </div>
       </div>
+      
+        <div class="frame">
+          <h1 class="frame__title"></h1> 
+        </div>
+        <div class="content">
+          <div class="content__inner">
+          </div>
+          <div class="content__inner hidden">
+          </div>
+          <div class="layers">
+            <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/dragonball1.PNG)"></div></div>
+            <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/dragonball1.PNG)"></div></div>
+            <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/dragonball1.PNG)"></div></div>
+            <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/dragonball1.PNG)"></div></div>
+            <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/dragonball1.PNG)"></div></div>
+            <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/dragonball1.PNG)"></div></div>
+          </div>
+        </div>
+
     </main>
 
     <script src="js/gsap.min.js"></script>
