--- a/index.html
+++ b/index.html
@@ -75,25 +75,25 @@
         </div>
       </div>
       
-        <div class="frame">
-          <h1 class="frame__title"></h1> 
+      <!-- <div class="frame">
+        <h1 class="frame__title"></h1> 
+      </div>
+      <div class="content">
+        <div class="content__inner">
         </div>
-        <div class="content">
-          <div class="content__inner">
-          </div>
-          <div class="content__inner hidden">
-          </div>
-          <div class="layers">
-            <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/dragonball1.PNG)"></div></div>
-            <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/dragonball1.PNG)"></div></div>
-            <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/dragonball1.PNG)"></div></div>
-            <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/dragonball1.PNG)"></div></div>
-            <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/dragonball1.PNG)"></div></div>
-            <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/dragonball1.PNG)"></div></div>
-          </div>
+        <div class="content__inner hidden">
         </div>
+        <div class="layers">
+          <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/blue.png)"></div></div>
+          <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/orange.png)"></div></div>
+          <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/white.png)"></div></div>
+          <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/yellow.png)"></div></div>
+          <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/blue.png)"></div></div>
+          <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/orange.png)"></div></div>
+        </div>
+      </div>
 
-    </main>
+    </main> -->
 
     <script src="js/gsap.min.js"></script>
     <!-- Image preloader -->
