Added onclick transition to the homepage

--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Izzy's Page</title>
-    <meta name="description" content="Landing page for my personal site" />
+    <meta name="description" content="Home page for my site" />
     <meta name="author" content="Izzyv" />
     <link
       href="https://fonts.googleapis.com/css2?family=Press Start 2P&display=swap"
@@ -12,19 +12,11 @@
     />
 
     <link rel="stylesheet" type="text/css" href="css/base.css" />
-
-    <script>
-      document.documentElement.className = "js";
-    </script>
   </head>
 
-  <body class="loading">
+  <body>
     <main>
     </main>
-
-    <script src="js/gsap.min.js"></script>
-    <!-- Image preloader -->
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-    <script type="module" src="js/index.js"></script>
+    <script type="module" src="js/index2.js"></script>
   </body>
 </html>
