--- a/index.html
+++ b/index.html
@@ -91,13 +91,21 @@
           <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/blue.png)"></div></div>
           <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/orange.png)"></div></div>
         </div>
-      </div>
-
-    </main> -->
+      </div> -->
+    </main>
 
     <script src="js/gsap.min.js"></script>
     <!-- Image preloader -->
     <script src="js/imagesloaded.pkgd.min.js"></script>
     <script type="module" src="js/index.js"></script>
+    <script>
+      document.body.addEventListener('click', function() {
+        document.body.style.opacity = '0';
+
+        setTimeout(function() {
+          window.location.href = 'homepage.html';
+        }, 500);
+      });
+    </script>
   </body>
 </html>
