Move star script to a different file

--- a/homepage.html
+++ b/homepage.html
@@ -17,6 +17,6 @@
   <body>
     <main>
     </main>
-    <script type="module" src="js/index2.js"></script>
+    <script src="js/stars.js"></script>
   </body>
 </html>
