--- a/index.html
+++ b/index.html
@@ -74,30 +74,13 @@
           <h5 class="headings_subtitle font-regular">Press anywhere</h5>
         </div>
       </div>
-      
-      <!-- <div class="frame">
-        <h1 class="frame__title"></h1> 
-      </div>
-      <div class="content">
-        <div class="content__inner">
-        </div>
-        <div class="content__inner hidden">
-        </div>
-        <div class="layers">
-          <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/blue.png)"></div></div>
-          <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/orange.png)"></div></div>
-          <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/white.png)"></div></div>
-          <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/yellow.png)"></div></div>
-          <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/blue.png)"></div></div>
-          <div class="layers__item"><div class="layers__item-img" style="background-image:url(/img/orange.png)"></div></div>
-        </div>
-      </div> -->
     </main>
 
     <script src="js/gsap.min.js"></script>
     <!-- Image preloader -->
     <script src="js/imagesloaded.pkgd.min.js"></script>
     <script type="module" src="js/index.js"></script>
+    <script src="js/stars.js"></script>
     <script>
       document.body.addEventListener('click', function() {
         document.body.style.opacity = '0';
