Move onclick event to separate file

--- a/index.html
+++ b/index.html
@@ -81,14 +81,6 @@
     <script src="js/imagesloaded.pkgd.min.js"></script>
     <script type="module" src="js/index.js"></script>
     <script src="js/stars.js"></script>
-    <script>
-      document.body.addEventListener('click', function() {
-        document.body.style.opacity = '0';
-
-        setTimeout(function() {
-          window.location.href = 'homepage.html';
-        }, 500);
-      });
-    </script>
+    <script src="js/intro_onclick.js"></script>
   </body>
 </html>
