Add nav bar to homepage

--- a/homepage.html
+++ b/homepage.html
@@ -15,6 +15,12 @@
   </head>
 
   <body>
+    <nav id="navbar">
+      <ul class="nav-links">
+        <li><a href="https://www.linkedin.com/in/isabelle-velasco-personal-link/">Linkedin</a></li>
+        <li><a href="https://github.com/what-it-izz">Github</a></li>
+      </ul>
+    </nav>
     <main>
     </main>
     <script src="js/stars.js"></script>
