Add contents to homepage

--- a/homepage.html
+++ b/homepage.html
@@ -10,7 +10,6 @@
       href="https://fonts.googleapis.com/css2?family=Press Start 2P&display=swap"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" type="text/css" href="css/base.css" />
   </head>
 
@@ -22,6 +21,12 @@
       </ul>
     </nav>
     <main>
+      <div class="container">
+        <h1 class="font-regular">Welcome to my website.</h1>
+        <h4 class="headings_subtitle font-regular">Feel free to take a look at my <a href="#">resume</a>, </h4>
+        <h4 class="headings_subtitle font-regular">connect with me on <a href="https://www.linkedin.com/in/isabelle-velasco-personal-link/">linkedin</a>, </h4>
+        <h4 class="headings_subtitle font-regular">check out my side projects on <a href="https://github.com/what-it-izz">github.</a> </h4>
+    </div>
     </main>
     <script src="js/stars.js"></script>
   </body>
