--- a/index.html
+++ b/index.html
@@ -26,43 +26,43 @@
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(/img/dragonball1.PNG)"
+                style="background-image: url(img/dragonball1.PNG)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(/img/dragonball1.PNG)"
+                style="background-image: url(img/dragonball1.PNG)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(/img/dragonball1.PNG)"
+                style="background-image: url(img/dragonball1.PNG)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(/img/dragonball1.PNG)"
+                style="background-image: url(img/dragonball1.PNG)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(/img/dragonball1.PNG)"
+                style="background-image: url(img/dragonball1.PNG)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(/img/dragonball1.PNG)"
+                style="background-image: url(img/dragonball1.PNG)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(/img/dragonball1.PNG)"
+                style="background-image: url(img/dragonball1.PNG)"
               ></div>
             </div>
           </div>
