Added updated images

--- a/index.html
+++ b/index.html
@@ -26,43 +26,43 @@
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(img/dragonball1.PNG)"
+                style="background-image: url(img/Dragonballs1.PNG)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(img/dragonball1.PNG)"
+                style="background-image: url(img/Dragonballs2.PNG)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(img/dragonball1.PNG)"
+                style="background-image: url(img/Dragonballs3.PNG)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(img/dragonball1.PNG)"
+                style="background-image: url(img/Dragonballs4.PNG)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(img/dragonball1.PNG)"
+                style="background-image: url(img/Dragonballs6.PNG)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(img/dragonball1.PNG)"
+                style="background-image: url(img/Dragonballs5.PNG)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(img/dragonball1.PNG)"
+                style="background-image: url(img/Dragonballs7.PNG)"
               ></div>
             </div>
           </div>
