--- a/homepage.html
+++ b/homepage.html
@@ -16,7 +16,7 @@
   <body>
     <nav id="navbar">
       <ul class="nav-links">
-        <li><a href="pdf/resume_for_website.pdf">Resume</a>
+        <li><a href="pdf/resume_for_website.pdf" download="my_resume.pdf">Resume</a>
         <li><a href="https://www.linkedin.com/in/isabelle-velasco-personal-link/">Linkedin</a></li>
         <li><a href="https://github.com/what-it-izz">Github</a></li>
       </ul>
@@ -27,6 +27,7 @@
         <h4 class="headings_subtitle font-regular">Feel free to take a look at my <a href="pdf/resume_for_website.pdf">resume</a>, </h4>
         <h4 class="headings_subtitle font-regular">connect with me on <a href="https://www.linkedin.com/in/isabelle-velasco-personal-link/">linkedin</a>, </h4>
         <h4 class="headings_subtitle font-regular">check out my side projects on <a href="https://github.com/what-it-izz">github</a>. </h4>
+        <!-- <p>This website is a backend dev's attempt at frontend magic :D <br> It is currently made with HTML, CSS, Vanilla JavaScript & is still very much under construction. </p> -->
     </div>
     </main>
     <script src="js/stars.js"></script>
