--- a/homepage.html
+++ b/homepage.html
@@ -28,7 +28,8 @@
         <h4 class="headings_subtitle font-regular">connect with me on <a href="https://www.linkedin.com/in/isabelle-velasco-personal-link/">linkedin</a>, </h4>
         <h4 class="headings_subtitle font-regular">check out my side projects on <a href="https://github.com/what-it-izz">github</a>. </h4>
         <!-- <p>This website is a backend dev's attempt at frontend magic :D <br> It is currently made with HTML, CSS, Vanilla JavaScript & is still very much under construction. </p> -->
-    </div>
+      </div>
+      <audio controls loop src="music/AI_Test_Kitchen_chill_lofi.mp3"></audio>
     </main>
     <script src="js/stars.js"></script>
   </body>
