--- a/homepage.html
+++ b/homepage.html
@@ -29,7 +29,7 @@
         <h4 class="headings_subtitle font-regular">check out my side projects on <a href="https://github.com/what-it-izz">github</a>. </h4>
         <!-- <p>This website is a backend dev's attempt at frontend magic :D <br> It is currently made with HTML, CSS, Vanilla JavaScript & is still very much under construction. </p> -->
       </div>
-      <audio controls loop src="music/AI_Test_Kitchen_chill_lofi.mp3"></audio>
+      <!-- <audio controls loop src="music/AI_Test_Kitchen_chill_lofi.mp3"></audio> -->
     </main>
     <script src="js/stars.js"></script>
   </body>
