--- a/homepage.html
+++ b/homepage.html
@@ -16,7 +16,7 @@
   <body>
     <nav id="navbar">
       <ul class="nav-links">
-        <li><a href="pdf/resume_for_website.pdf" download="my_resume.pdf">Resume</a>
+        <li><a href="pdf/resume_for_website.pdf" download="resume_for_website.pdf">Resume</a>
         <li><a href="https://www.linkedin.com/in/isabelle-velasco-personal-link/">Linkedin</a></li>
         <li><a href="https://github.com/what-it-izz">Github</a></li>
       </ul>
